--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <nav className="navbar navbar-expand-lg navbar-light">
                         <div className="container box_1620">
 
-                            <Link className="navbar-brand logo_h" to="index.html">
+                            <Link className="navbar-brand logo_h" to="/">
                                 <img src="./assets/img/logo.png" alt="" />
                             </Link>
                             <button className="navbar-toggler" type="button" data-toggle="collapse"
@@ -141,41 +141,35 @@
                                         <h4>Software Engineer</h4>
                                         
                                         <ul className="list basic_info">
-                                            <li>
-                                                <a href="#">
-                                                    <i className="fa fa-calendar"></i> 
-                                                    7 April 1991
-                                                </a>
+                                            <li className="text-info">
+                                                <i className="fa fa-calendar"></i> 
+                                                &nbsp; 7 April 1991
                                             </li>
                                             
-                                            <li>
-                                                <a href="#">
-                                                    <i className="fa fa-heart"></i> 
-                                                    Menikah
-                                                </a>
+                                            <li className="text-info">
+                                                <i className="fa fa-heart"></i> 
+                                                &nbsp; Menikah
                                             </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i className="fa fa-flag"></i> 
-                                                    Warga Negara Indonesia
-                                                </a>
+                                            <li className="text-info">
+                                                <i className="fa fa-flag"></i> 
+                                                &nbsp; Warga Negara Indonesia
                                             </li>
                                         </ul>
                                         <ul className="list personal_social">
                                             <li>
-                                                <a href="https://web.facebook.com/NeroMichaki" title="facebook">
+                                                <Link to="https://web.facebook.com/NeroMichaki" title="facebook">
                                                     <i className="fa fa-facebook"></i>
-                                                </a>
+                                                </Link>
                                             </li>
                                             <li>
-                                                <a href="https://github.com/alpredoRuben" title="github">
+                                                <Link to="https://github.com/alpredoRuben" title="github">
                                                     <i className="fa fa-github"></i>
-                                                </a>
+                                                </Link>
                                             </li>
                                             <li>
-                                                <a href="https://www.linkedin.com/in/alpredo-ruben" title="linked in">
+                                                <Link to="https://www.linkedin.com/in/alpredo-ruben" title="linked in">
                                                     <i className="fa fa-linkedin"></i>
-                                                </a>
+                                                </Link>
                                             </li>
                                         </ul>
                                     </div>
@@ -398,13 +392,13 @@
                                 <div className="h_gallery_item">
                                     <div className="g_img_item">
                                         <img className="img-fluid" src="./assets/img/projects/learning-hub.jpg" alt="Learning Hub" />
-                                        <a className="light" href="./assets/img/projects/learning-hub.jpg">
+                                        <Link className="light" to="./assets/img/projects/learning-hub.jpg">
                                             <img src="./assets/img/projects/learning-hub.jpg" alt="" />
-                                        </a>
+                                        </Link>
                                     </div>
                                     <div className="g_item_text">
                                         <h4>
-                                            <a href="https://learning-hub.id/#/main" target="_blank">Learning Hub</a>    
+                                            <Link to="https://learning-hub.id/#/main" target="_blank">Learning Hub</Link>    
                                         </h4>
                                         <p>Minda App Project</p>
                                     </div>
@@ -415,13 +409,13 @@
                                 <div className="h_gallery_item">
                                     <div className="g_img_item">
                                         <img className="img-fluid" src="./assets/img/projects/epipay.jpg" alt="PT. INTERPRIMA NUSANTARA MANDIRI" />
-                                        <a className="light" href="./assets/img/projects/epipay.jpg">
+                                        <Link className="light" to="./assets/img/projects/epipay.jpg">
                                             <img src="./assets/img/projects/epipay.jpg" alt="" />
-                                        </a>
+                                        </Link>
                                     </div>
                                     <div className="g_item_text">
                                         <h4 className="text-info">
-                                            <a href="https://epipay.co.id" target="_blank">Epipay</a>     
+                                            <Link to="https://epipay.co.id" target="_blank">Epipay</Link>     
                                         </h4>
                                         <p>Interprima Web App</p>
                                     </div>
@@ -432,9 +426,9 @@
                                 <div className="h_gallery_item">
                                     <div className="g_img_item">
                                         <img className="img-fluid" src="./assets/img/projects/bank_data.jpg" alt="KEMENKEU" />
-                                        <a className="light" href="./assets/img/projects/bank_data.jpg">
+                                        <Link className="light" to="./assets/img/projects/bank_data.jpg">
                                             <img src="./assets/img/projects/epipay.jpg" alt="" />
-                                        </a>
+                                        </Link>
                                     </div>
                                     <div className="g_item_text">
                                         <h4 className="text-info">
