Add CV Download

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                                                 <i className="fa fa-flag"></i> 
                                                 &nbsp; Warga Negara Indonesia
                                             </li>
+                                            <li className="text-info">
+                                                <a href="./CV.pdf" download="PDF" target="_blank">
+                                                    <i className="fa fa-download"></i>Download CV
+                                                </a>
+                                            </li>
                                         </ul>
                                         <ul className="list personal_social">
                                             <li>
@@ -171,6 +176,7 @@
                                                     <i className="fa fa-linkedin"></i>
                                                 </Link>
                                             </li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
