--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <div className="media-body">
                                     <div className="personal_text">
                                         <h6>Selamat Datang di Profil Saya</h6>
-                                        <h3>Ruben Alpredo Tampubolon</h3>
+                                        <h3 style={{ fontSize: 25, color: '#0053b8' }}>Ruben Alpredo Tampubolon</h3>
                                         <h4>Software Engineer</h4>
                                         
                                         <ul className="list basic_info">
